# riskops

./: .gitignore  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
.github/workflows/: deploy-vm.yml
api/: oapi-codegen.yaml
apps/data-ingestion-service/: go.mod
apps/data-processing-service/: go.mod
apps/frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/gateway/: Dockerfile  main.go
apps/inference-service/: Dockerfile  go.mod  pyproject.toml
apps/inference-service/inference_service/: __init__.py  config.py  kafka_consumer.py  main.py
apps/inference-service/inference_service/api/: __init__.py  routes.py
apps/inference-service/inference_service/models/: __init__.py  loader.py  mc_pyfunc.py  predictor.py
apps/inference-service/inference_service/scenarios/: __init__.py  engine.py
apps/inference-service/riskops_inference/: db.py  main.py  models.py  risk.py
apps/market-data-service/: Dockerfile  main.go  openapi.yaml
apps/model-registry-service/: go.mod
apps/pipelines/: Dockerfile  pyproject.toml  requirements.txt
apps/pipelines/riskops_pipelines/: cli.py  db.py
apps/portfolio-service/: Dockerfile  go.mod  main.go  openapi.yaml
apps/risk-calculation-service/: go.mod
apps/training-service/: Dockerfile  pyproject.toml
apps/training-service/training_service/: config.py  db.py  kafka_consumer.py  main.py
apps/training-service/training_service/api/: routes.py
apps/training-service/training_service/backtesting/: __init__.py  christoffersen.py  kupiec.py  report.py  rolling_backtest.py
apps/training-service/training_service/metrics/: __init__.py  risk_metrics.py
apps/training-service/training_service/models/: garch.py  mc_pyfunc.py  montecarlo.py
apps/training-service/training_service/pipelines/: train.py
docs/: gateway.md  inference-service.md  training-service.md
docs/services_docs/: infra.md  market-data-service.md  pipelines.md  portfolio-service.md
infra/airflow/: Dockerfile
infra/caddy/: Caddyfile
infra/prometheus/: prometheus.yml
pkg/: go.mod
pkg/config/: config.go
pkg/database/: database.go
pkg/errors/: errors.go
pkg/httpserver/: metrics.go  server.go
pkg/kafka/: brokers.go  consumer.go  producer.go  topics.go
pkg/logger/: logger.go
pkg/models/: models.go
pkg/postgres/: postgres.go
pkg/swaggerui/: swaggerui.go
plans/: architecture-plan.md
scripts/: e2e_test.sh
ui/: Dockerfile  docker-entrypoint.sh  index.html  vite.config.ts
(+109 files in other folders)
